# Minesweeper-Solver

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: game_state_1.txt  game_state_2.txt  game_state_4.txt  model.pt
minesweeper_solver/: DQL.py  dql_solver.py  grid.py  main.py  minefield.py  minesweeper_ui.py  solver.py  utils.py
models/: model_flags.pt  model_no_flags.pt
tests/: test_minefield.py  test_minesweeper_env.py  test_solver.py  test_utils.py  utils.py
tests/resources/: game_state_3.txt
